| Bug #5150 | Views: View using function: fails | ||
|---|---|---|---|
| Submitted: | 23 Aug 2004 0:40 | Modified: | 6 Sep 2004 13:43 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[23 Aug 2004 0:40]
Peter Gulutzan
[23 Aug 2004 0:55]
Peter Gulutzan
The initial comment was incorrect. This bug applies to views with any function, not dropped functions.
[30 Aug 2004 21:54]
Oleksandr Byelkin
ChangeSet 1.1738 04/08/30 22:52:50 bell@sanja.is.com.ua +3 -0 fixed case when real length very close to calculated (BUG#5150)
[6 Sep 2004 13:43]
Oleksandr Byelkin
Thank you for bugreport! Bug is fixed patch ios pushed into our source repository.
