fixed case when real length very close to calculated (BUG#5150)

mysql-test/r/view.result:
  tested problem when function name length close to ALIGN_SIZE
mysql-test/t/view.test:
  tested problem when function name length close to ALIGN_SIZE
sql/item_func.cc:
  fixed case when real length very close to calculated (less then ALIGN)